chore: Cleanup test dependencies (#3356)